# project64

./: .gitignore  CMakeLists.txt  Project64.vs2010.sln  README.md
PropertySheets/: Debug.props  Default.props  Release.props  Root.props  Win32.Debug.props  Win32.Release.props  Win32.props
Source/3rd Party/7zip/: 7zip.vcxproj  7zip.vcxproj.filters
Source/3rd Party/WTL/: WTL.vcxproj  WTL.vcxproj.filters
Source/3rd Party/wx/: wx_base.vcxproj  wx_base.vcxproj.filters  wx_core.vcxproj  wx_core.vcxproj.filters  wx_wxjpeg.vcxproj  wx_wxjpeg.vcxproj.filters  wx_wxpng.vcxproj  wx_wxpng.vcxproj.filters  wx_wxzlib.vcxproj  wx_wxzlib.vcxproj.filters
Source/3rd Party/zlib/: zlib.vcxproj  zlib.vcxproj.filters
Source/Common/: Common.vcxproj  Common.vcxproj.filters  stdafx.h
Source/Glide64/: Gfx #1.3.h  Glide64.vcproj  Glide64.vcxproj  Glide64.vcxproj.filters  Main.cpp
Source/GlideHQ/: GlideHQ.vcxproj  GlideHQ.vcxproj.filters  TextureFilters_hq2x.cpp
Source/Glitch64/: Glitch64.vcxproj  Glitch64.vcxproj.filters
Source/Installer/: Installer.iss  Installer.vcxproj  Installer.vcxproj.filters
Source/Project64/: Plugin.h  Project64.vcproj  Project64.vcxproj  Project64.vcxproj.filters  Support.h  main.cpp  stdafx.h
Source/Project64/3rd Party/: zip.h
Source/Project64/N64 System/Mips/: Audio.cpp  Memory Virtual Mem.cpp
Source/Project64/N64 System/Recompiler/: Code Section.cpp
Source/Project64/Plugins/: Audio Plugin.cpp  Audio Plugin.h  Controller Plugin.cpp  Controller Plugin.h  GFX plugin.cpp  GFX plugin.h  Plugin Class.cpp  Plugin List.cpp  Plugin.cpp  Plugin.h  RSP Plugin.cpp  RSP Plugin.h
Source/Project64/User Interface/: Main Menu Class.cpp
Source/Project64/User Interface/Settings/: Settings Page - Game - Plugin.cpp  Settings Page - Plugin.cpp
Source/RSP/: Interpreter CPU.c  Interpreter Ops.c  OpCode.h  RSP.vcxproj  RSP.vcxproj.filters  Recompiler Analysis.c  Recompiler CPU.c  X86.h
Source/Settings/: Settings.vcxproj  Settings.vcxproj.filters
Source/SortRdb/: SortRdb.vcxproj
Source/nragev20/: FileAccess.cpp  Interface.cpp  NRage_Input_V2.vcxproj  NRage_Input_V2.vcxproj.filters  PakIO.cpp  XInputController.cpp  commonIncludes.h
